Fixes #12370 by adding css attr to wrap word within the cell width limit
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@24418 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/claroGrid.css
+++ b/grid/resources/claroGrid.css
@@ -158,6 +158,7 @@
 .claro .dojoxGridCell {
 	outline: none;
 	padding: 3px 5px;
+	word-wrap: break-word;
 	border:1px solid transparent;
 	border-color: transparent #E5DAC8 #E5DAC8 transparent;
 }
